# cc4slack

./: ARCHITECTURE.md  BEHAVIOR.md  GUIDELINES.md  README.md  install.sh  pyproject.toml
agent/: claude_runner.py  config.py  main.py  session_file.py  ws_client.py
router/: blocks.py  commands.py  config.py  main.py  message_updater.py  slack_handler.py  thread_store.py  ws_manager.py
scripts/: install-agent.sh
shared/: protocol.py
src/: config.py  main.py
src/claude/: agent.py
src/sessions/: manager.py
src/slack/: actions.py  app.py  blocks.py  events.py  message_updater.py
tests/: test_behavior.py  test_claude_runner.py  test_commands.py  test_message_updater.py  test_protocol.py  test_session_file.py  test_startup.py  test_thread_store.py  test_ws_manager.py
