[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc4slack"
version = "0.1.0"
description = "Claude Code integration for Slack - interact with Claude Code agent from Slack"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Eran", email = "eran@example.com" }
]
keywords = ["slack", "claude", "ai", "agent", "coding-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
    "claude-code-sdk>=0.0.25",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anyio>=4.0.0",
    "aiohttp>=3.9.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
cc4slack = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
