[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc4slack"
version = "1.0.0"
description = "Claude Code for Slack — router + agent system"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
